--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,5 @@
 name    = Epidermis-Lab-Instrument-BeckmanCoulter
+version = 0.001
 author  = Zakariyya Mughal <zmughal@cpan.org>
 license = Perl_5
 copyright_holder = Zakariyya Mughal
